--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = BSpyConvert
-version = 0.1
+version = 1.0
 author = Eric Brechner
 author_email = ericbrec@msn.com
-description = Library for converting BSpy json files to a variety of geometry formats
+description = Library for converting BSpy splines and solid models to and from OpenCascade (OCCT) equivalents and a variety of geometry and CAD file formats
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = http://github.com/ericbrec/BSpyConvert
@@ -19,11 +19,8 @@ classifiers =
     Environment :: Console
     Intended Audience :: Developers
     Intended Audience :: Science/Research
-    Topic :: Multimedia :: Graphics
-    Topic :: Multimedia :: Graphics :: 3D Rendering
     Topic :: Scientific/Engineering
     Topic :: Scientific/Engineering :: Mathematics
-    Topic :: Scientific/Engineering :: Visualization
     Topic :: Software Development :: Libraries :: Python Modules
     Programming Language :: Python :: 3
     Operating System :: OS Independent
