Fix documentation and add tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = BSpyConvert
-version = 1.0
+version = 1.2
 author = Eric Brechner
 author_email = ericbrec@msn.com
 description = Library for converting BSpy splines and solid models to and from OpenCascade (OCCT) equivalents and a variety of geometry and CAD file formats
@@ -12,7 +12,7 @@ license_files =
     LICENSE
 project_urls =
     Bug Tracker = http://github.com/ericbrec/BSpyConvert/issues
-keywords = opengl, bspline, B-spline, nub, tkinter
+keywords = bspline, B-spline, OCCT, OCC, OpenCascade, CAD, STEP, IGES, STL, solid modeling, solid model
 classifiers =
     License :: OSI Approved :: MIT License
     Environment :: Win32 (MS Windows)
